--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <head><meta name="msvalidate.01" content="A61F569EEC1AC095FFD7FD1655E2399A" />
+  <head>
+    <meta name="coinzilla" content="aa3a337d3cee51d6cd04bfc55b1c5b5c" />
+    <meta name="msvalidate.01" content="A61F569EEC1AC095FFD7FD1655E2399A" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
